# tP3-app

./: README.md  app_streamlit.py  pyproject.toml
.streamlit/: config.toml
data/processed/: adresses_geocodees_20251216_163809.parquet
notebook/: test_charts.ipynb
utils/: __init__.py  charts.py  chatbot.py  data.py
