[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tp3-app"
version = "0.1.0"
description = "TP3 - Application Data Interactive"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "gradio>=4.0.0",
    "plotly>=5.17.0",
    "altair>=5.0.0",
    "duckdb>=0.9.0",
    "litellm>=1.0.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["utils"]
